# project-template

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.github_repository }}/: .docstring.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
{{ cookiecutter.github_repository }}/.github/workflows/: ci.yaml
{{ cookiecutter.github_repository }}/automations/: config.yaml
{{ cookiecutter.github_repository }}/docs/: Makefile  README.md
{{ cookiecutter.github_repository }}/docs/source/: api.rst  conf.py  faq.md  index.rst  quickstart.md
{{ cookiecutter.github_repository }}/scripts/: auto_generate_all.py  cleanup_docstrings.py  generate_docs.py  generate_markdown_docs.py  generate_tests.py  integrated_doc_generator.py  markdown_builder.py  track_docstring_quality.py
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTOR-LICENSE.md  README.md  pyproject.toml
{{ cookiecutter.project_name }}/docs/: requirements-docs.txt
{{ cookiecutter.project_name }}/docs/source/: changelog.rst  config.py  contributing.md  faq.md  glossary.md  index.rst  introduction.md
{{ cookiecutter.project_name }}/docs/source/_static/: custom.js
{{ cookiecutter.project_name }}/docs/source/_static/css/: custom.css
{{ cookiecutter.project_name }}/src/{{cookiecutter.project_slug}}/: __init__.py
